@@ -1,6 +1,8 @@
 shutter (0.80~ppa1) jaunty; urgency=low
 
   * fixed bugs
+    -- LP: #353819
+       [check window border option when calculating shape]
     -- LP: #353824
        [fix advanced selection tool when using compiz]
   * Drawing Tool
@@ -12,7 +14,7 @@ shutter (0.80~ppa1) jaunty; urgency=low
        [keep tool focus after one usage]
   * updated translations
 
- -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 07 Apr 2009 17:42:46 +0200
+ -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 07 Apr 2009 20:29:57 +0200
 
 shutter (0.70.2~ppa4) jaunty; urgency=low
 
